[package]
name = "ufire_par"
version = "0.9.0"
authors = ["uFire <contact@gmail.com>"]
readme = "README.md"
description = "Measure PAR"
license = "MIT"
keywords = ["par", "ppfd", "sensor"]

[lib]
name = "ufire_par"
path = "src/lib.rs"

[[bin]]
name = "ufire_par_bin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.2"
byteorder = "1"
shrust = "0.0.6"
